// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAutoRestErrorReport > generates a report with errors 1`] = `
"**AutoRest errors:**

Readme: readme.md
Tag: tag1
Errors:
| Level | Message |
| ----- | ------- |
| :x: error | Error message 1 |
| :warning: fatal | Fatal error message |


Readme: readme2.md
Tag: tag2
Errors:
| Level | Message |
| ----- | ------- |
| :x: error | Error message 2 |


"
`;

exports[`generateLintDiffReport > fails if new violations include an error 1`] = `
"| Compared specs ([v1.0.0](https://www.npmjs.com/package/@microsoft.azure/openapi-validator/v/1.0.0)) | new version | base version |
| --- | --- | --- |
| default | [default](https://github.com/Azure/azure-rest-api-specs/blob/compareSha/file1.md) | [default](https://github.com/Azure/azure-rest-api-specs/blob/baseBranch/file1.md) |


**[must fix]The following errors/warnings are intorduced by current PR:**

| Rule | Message | Related RPC [For API reviewers] |
| ---- | ------- | ------------------------------- |
| :x: [SomeCode](https://github.com/Azure/azure-openapi-validator/blob/main/docs/some-code.md) | Some Message<br />Location: [Azure.Contoso.WidgetManager/stable/2022-12-01/widgets.json#L1](https://github.com/Azure/azure-rest-api-specs/blob/compareSha/specification/contosowidgetmanager/data-plane/Azure.Contoso.WidgetManager/stable/2022-12-01/widgets.json#L1) |  |

"
`;

exports[`generateLintDiffReport > passes if new violations do not include an error (warnings only) 1`] = `
"| Compared specs ([v1.0.0](https://www.npmjs.com/package/@microsoft.azure/openapi-validator/v/1.0.0)) | new version | base version |
| --- | --- | --- |
| default | [default](https://github.com/Azure/azure-rest-api-specs/blob/compareSha/file1.md) | [default](https://github.com/Azure/azure-rest-api-specs/blob/baseBranch/file1.md) |


**[must fix]The following errors/warnings are intorduced by current PR:**

| Rule | Message | Related RPC [For API reviewers] |
| ---- | ------- | ------------------------------- |
| :warning: [SomeCode](https://github.com/Azure/azure-openapi-validator/blob/main/docs/some-code.md) | Some Message<br />Location: [Azure.Contoso.WidgetManager/stable/2022-12-01/widgets.json#L1](https://github.com/Azure/azure-rest-api-specs/blob/compareSha/specification/contosowidgetmanager/data-plane/Azure.Contoso.WidgetManager/stable/2022-12-01/widgets.json#L1) |  |

"
`;
